--- a/docs/50_data_publication/30_licenses.mdx
+++ b/docs/50_data_publication/30_licenses.mdx
@@ -7,13 +7,13 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Licenses
 
-This page is currently still under construction.
+In order to provide you with some helpful information, we have compiled introductory links on this topic.
 
-In order to provide you with some helpful information until completion, we have compiled introductory links on this topic.
-
-- There is a brief overview of [choosing an open license](https://heidiseibold.ck.page/posts/choosing-an-open-license) as a researcher.
-- If you want to delve deeper into the topic of Creative Commons, you will find a good [overview](https://creativecommons.org/share-your-work/cclicenses/) with all the necessary information here
-- And for a comprehensive overview for chemists, you can read this [article by Thomas Hartmann](https://books.ub.uni-heidelberg.de/heibooks/catalog/book/979/chapter/13728) (in german)
+- [**Choosing an open license**](https://heidiseibold.ck.page/posts/choosing-an-open-license) as a researcher - overview.
+- [**Creative Commons overview**](https://creativecommons.org/share-your-work/cclicenses/) 
+- [**Comprehensive overview for chemists**](https://books.ub.uni-heidelberg.de/heibooks/catalog/book/979/chapter/13728) (in german)
+- **[Publishing research data](https://forschungsdaten.info/themen/rechte-und-pflichten/forschungsdaten-veroeffentlichen/)** (in german)
+- **[Open Data Commons](https://opendatacommons.org/licenses/odbl/)**
 
 
 
