fix: british englisch for licences

--- a/docs/00_intro/10_fair.mdx
+++ b/docs/00_intro/10_fair.mdx
@@ -124,7 +124,7 @@ Repositories should provide data publishers with the opportunity to include a pl
 
 #### R1.1. (meta)data are released with a clear and accessible data usage license
 
-The metadata should include human and machine-readable use conditions, such as a [license](/docs/licenses). [Creative Commons](https://creativecommons.org/) licenses are commonly used for scientific data. [re3data](https://www.re3data.org/) lists whether a repository allows researchers to directly select a license or terms of use agreement when depositing data. At a minimum, repositories should allow researchers to add a license file.
+The metadata should include human and machine-readable use conditions, such as a [licence](/docs/licences). [Creative Commons](https://creativecommons.org/) licences are commonly used for scientific data. [re3data](https://www.re3data.org/) lists whether a repository allows researchers to directly select a licence or terms of use agreement when depositing data. At a minimum, repositories should allow researchers to add a licence file.
 
 #### R1.2. (meta)data are associated with detailed provenance
 
