--- a/docs/30_data/50_data_storage.mdx
+++ b/docs/30_data/50_data_storage.mdx
@@ -52,7 +52,7 @@ Many of the requirements are often solved by dedicated [repositories](/docs/repo
 _see [RDMKit](https://rdmkit.elixir-europe.org/preserving)_
 :::
 
-Documentation or conversion of files into long-term backup formats. The data-holding facility must for its part guarantee security, quality and availability. Consider any license regulations or data protection of personal data when releasing it to the public.
+Documentation or conversion of files into long-term backup formats. The data-holding facility must for its part guarantee security, quality and availability. Consider any licence regulations or data protection of personal data when releasing it to the public.
 
 If you publish your data in public repositories, your data will also be preserved.
 
