--- a/docs/40_smartlab/15_choose_eln.mdx
+++ b/docs/40_smartlab/15_choose_eln.mdx
@@ -36,7 +36,7 @@ Therefore, choosing the right ELN is crucial for a successful implementation of 
 
 |Category|Explanation|
 |:------------|:------------|
-|License model|Commercial ELNs mostly use proprietary file formats, the source code is closed source and a license fee is charged. Open source ELNs are free of charge, use open standard formats, source code is openly accessible and further developed by an active developer community. Implementation and maintenance require the appropriate human resources.|
+|Licence model|Commercial ELNs mostly use proprietary file formats, the source code is closed source and a licence fee is charged. Open source ELNs are free of charge, use open standard formats, source code is openly accessible and further developed by an active developer community. Implementation and maintenance require the appropriate human resources.|
 |Providing model|Software can be provided either in a cloud (SaaS - Software as a Service) or server-based for local installation at the customer's site (on-premises).|
 |File storage|Data storage in the cloud of the ELN provider (or their service provider, e.g. in the EU) or the possibility of storage on own local servers/in the own cloud are offered.|
 |Concept|Concept refers to the subject-specific orientation. Generic tools can be used in all subjects, but usually do not provide specific features, such as structure editors for chemistry.|
