--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -21,7 +21,7 @@ Repositories can be hosted at institutional servers or are provided by broader o
 
 A repository is constituted by a repository software and a database. Researchers transfer their data to the repository typically via a browser-based user interface, and/or the repository operators **harvest** the data from other platforms via appropriate protocols and interfaces.
 
-Some, but not all, repositories curate and review the data before **ingestion** with regard to their content and quality, sometimes also regarding legal aspects (copyright, data protection, [licenses](/docs/licenses)).
+Some, but not all, repositories curate and review the data before **ingestion** with regard to their content and quality, sometimes also regarding legal aspects (copyright, data protection, [licences](/docs/licences)).
 
 In order to allow data reuse by other researchers, [metadata](/docs/metadata), including [provenance information](/docs/provenance/), are required beside the actual data. Metadata describe the research data and provide information about its creation, the methods or software used as well as legal aspects. Metadata can be either added manually via a metadata editor or can be provided through other applications. The process to manually add metadata via a metadata editor can be compared to the process of submitting a manuscript to a publisher via the publishers submission system.
 
