--- a/docs/50_data_publication/20_choose_repository/10_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository/10_choose_repository.mdx
@@ -37,7 +37,7 @@ Based on the [criteria](https://doi.org/10.3897/rio.6.e55852) chosen by Task Are
 -   [Inorganic Crystal Structure Database](/docs/csd_icsd/)\*<br/>Field-specific repository for x-ray diffraction data of inorganic compounds, elements, minerals, intermetallic phases and ionic solids, operated by FIZ Karlsruhe.
 -   [Joint CCDC/FIZ Access Structures Service](/docs/csd_icsd/)<br/>Service that provides open access to the CSD Structure Depot, but not to all CSD data.
 
-\*Resource for which a license agreement is required.
+\*Resource for which a licence agreement is required.
 
 ## Further Repositories
 
@@ -47,7 +47,7 @@ Based on the [criteria](https://doi.org/10.3897/rio.6.e55852) chosen by Task Are
 -   [Zenodo](https://zenodo.org/)<br/>Generic repository developed under the European OpenAIRE program, operated by CERN.
 -   [EUDAT B2SHARE](https://sp.eudat.eu/catalog/resources/709c053d-3b3f-4c54-8ef4-6efeea387816)<br/>Generic repository operated by a pan-european network consisting of more than 25 research organisations, data and computing centers.
 
-\*Resource for which a license agreement is required.
+\*Resource for which a licence agreement is required.
 
 ## Currently under Development within NFDI4Chem
 
@@ -65,6 +65,6 @@ Further details of the repositories listed above can be found on the sub-pages o
 
 Main authors: [ORCID:0000-0001-7696-7662](https://orcid.org/0000-0001-7696-7662), [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661) and [ORCID:0000-0002-5035-7978](https://orcid.org/0000-0002-5035-7978)
 
-_This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International License to allow for reuse of these lists._
+_This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International Licence to allow for reuse of these lists._
 
 ![CC0 badge](/img/cc-zero.svg)
