--- a/docs/50_data_publication/20_choose_repository/50_nmrxiv.mdx
+++ b/docs/50_data_publication/20_choose_repository/50_nmrxiv.mdx
@@ -36,7 +36,7 @@ The immediate goal of nmrXiv is to integrate and execute the following objective
 
 ### Software Development
 
-To develop nmrXiv based on a voluntarily FAIR, cloud-based infrastructure that uses freely shared source code and deployment methods. Apply industry-grade development practices to ensure platform reliability, safety, and efficacy. Use Continuous Improvement principles will ensure an always-on user experience and high reliability. Release the codebase and infrastructure details (including the development, documentation, and usage practices) through MIT Open Source License for openness.
+To develop nmrXiv based on a voluntarily FAIR, cloud-based infrastructure that uses freely shared source code and deployment methods. Apply industry-grade development practices to ensure platform reliability, safety, and efficacy. Use Continuous Improvement principles will ensure an always-on user experience and high reliability. Release the codebase and infrastructure details (including the development, documentation, and usage practices) through MIT Open Source Licence for openness.
 
 More details about the platform architecture and related topics – [here](https://docs.nmrxiv.org/developer-guides/architecture.html)
 
