--- a/docs/50_data_publication/30_licences.mdx
+++ b/docs/50_data_publication/30_licences.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Licenses"
-slug: "/licenses"
+title: "Licences"
+slug: "/licences"
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Licenses
+# Licences
 
 In order to provide you with some helpful information, we have compiled introductory links on this topic.
 
