--- a/docs/50_data_publication/60_machine-readable_chemical_structures.mdx
+++ b/docs/50_data_publication/60_machine-readable_chemical_structures.mdx
@@ -114,7 +114,7 @@ Templates for such a table containing the minimum recommended columns are provid
 If the experimental work is documented in an [ELN](/docs/eln), these information could also be provided by the ELN system. Chemotion ELN generates [SMILES](/docs/smiles), [InChI](/docs/inchi), InChIKey as well as RInChI and RInChIKey for compounds and reactions. These information are also available in Chemotion Repository i.e. such a supplementary table is not required with structured, field-specific repositories such as Chemotion Repository, while datasets in generic repositories will profit from such a table.
 :::
 
-_This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International License._
+_This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International Licence._
 
 ![CC0 badge](/img/cc-zero.svg)
 
