--- a/docs/60_topics/63_data_description_annotation/20_ontology.mdx
+++ b/docs/60_topics/63_data_description_annotation/20_ontology.mdx
@@ -47,15 +47,15 @@ Here we can see that these ontologies have different scopes, which means they on
 This tabular overview lists the suitable ontologies with regard to:
 
 -   their general research domain,
--   their open access license,
+-   their open access licence,
 -   the possibility of reusing them in a modular way (whereas a BFO alignment and OBO compatibility indicates an increased possibility),
 -   and, their use in known applications.
 
-| Ontology                                                                       | Domain                          | License                                                                          | Modularity                                                 | Used in                                                                                                    |
+| Ontology                                                                       | Domain                          | Licence                                                                          | Modularity                                                 | Used in                                                                                                    |
 | ------------------------------------------------------------------------------ | ------------------------------- | -------------------------------------------------------------------------------- | ---------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------- |
 | [ChEBI](https://www.ebi.ac.uk/ols/ontologies/chebi)                            | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | YMDB, HMDB, PubChem, MassBank, KNApSAcK, UM-BBD, GMD, SMID-DB                                              |
 | [CHIRO](https://terminology.nfdi4chem.de/ts/ontologies/chiro)                  | chemistry                       | [CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/)                    | BFO & OBO based                                            | unknown                                                                                                    |
-| [ChemOnt](http://classyfire.wishartlab.com/downloads)                          | chemistry                       | custom OA license                                                                | subsumable under BFO's _material entity_                   | YMDB, HMDB, T3DB, ECMDB, DrugBank,PubChem, ChEBI, LIPID MAPS, MoNA                                         |
+| [ChemOnt](http://classyfire.wishartlab.com/downloads)                          | chemistry                       | custom OA licence                                                                | subsumable under BFO's _material entity_                   | YMDB, HMDB, T3DB, ECMDB, DrugBank,PubChem, ChEBI, LIPID MAPS, MoNA                                         |
 | [CHEMINF](https://terminology.nfdi4chem.de/ts/ontologies/cheminf)              | chemistry                       | [CC-BY 3.0](https://creativecommons.org/licenses/by/3.0/)                        | BFO & OBO based                                            | PubChem, Open PHACTS                                                                                       |
 | [CHMO](https://terminology.nfdi4chem.de/ts/ontologies/chmo)                    | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | Chemotion, Allotrope™                                                                                      |
 | [MOP](https://terminology.nfdi4chem.de/ts/ontologies/mop)                      | chemistry                       | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)                        | BFO & OBO based                                            | RXNO                                                                                                       |
