--- a/docs/50_data_publication/50_data_availability_statement.mdx
+++ b/docs/50_data_publication/50_data_availability_statement.mdx
@@ -54,7 +54,7 @@ Please note that data availability statements such as _'data available on reques
 -   [Joint Declaration of Data Citation Principles](https://doi.org/10.25490/a97f-egyk)
 -   [Data Access Committee - European Genome-Phenome Archive](https://ega-archive.org/submission/data_access_committee)
 
-_This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International License._
+_This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International Licence._
 
 ![CC0 badge](/img/cc-zero.svg)
 
