--- a/docs/50_data_publication/30_licences.mdx
+++ b/docs/50_data_publication/30_licences.mdx
@@ -7,18 +7,28 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Licences
 
-In order to provide you with some helpful information, we have compiled introductory links on this topic.
+Licences for research data often cause confusion among researchers. One of the main reasons for this is the interplay between **licences used for research data** and the requirements for referencing previous scientific work on which the current work is based, in accordance with the [Guidelines for Safeguarding Good Scientific Practice (DFG Code)](https://wissenschaftliche-integritaet.de/en/code-of-conduct/). 
 
-- [**Choosing an open license**](https://heidiseibold.ck.page/posts/choosing-an-open-license) as a researcher - overview.
-- [**Creative Commons overview**](https://creativecommons.org/share-your-work/cclicenses/) 
-- [**Comprehensive overview for chemists**](https://books.ub.uni-heidelberg.de/heibooks/catalog/book/979/chapter/13728) (in german)
-- **[Publishing research data](https://forschungsdaten.info/themen/rechte-und-pflichten/forschungsdaten-veroeffentlichen/)** (in german)
-- **[Open Data Commons](https://opendatacommons.org/licenses/odbl/)**
+The DFG Code requires researchers to cite original sources, i.e. to include original sources in reference sections. Providing a licence for research data is a way to provide permission to share and reuse the data.
 
+Work on dedicated licences for research data is ongoing. Until these licences are available, we recommend switching to [Creative Commons]((https://creativecommons.org/)) licences, which were developed for the licensing of creative works.
 
+:::info Recommendation:
+NFDI4Chem recommends the use the least restritive [Creative Commons](https://creativecommons.org/) licences such as [CC0](https://creativecommons.org/public-domain/cc0/) and [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/deed.en) 
+:::
 
+:::danger Notice:
+As a first starting point for further information, we strongly recommend the page on [Licenses for research data](https://radar.products.fiz-karlsruhe.de/en/radarfeatures/lizenzen-fuer-forschungsdaten) provided by FIZ Karlsruhe, which also includes information on certain rights that authors cannot waive in Germany, that copyright only protects personal intellectual creations, and that isolated research data are not protected by copyright.  
+:::
 
-<!-- Copied from FAIR Article. This article is now linked from there. Please consider for this article. [Creative Commons](https://creativecommons.org/) licenses are commonly used for scientific data and this [license selection tool](https://creativecommons.org/choose/) can help researchers assign a license that fits their needs.-->
+Disclaimer: It should be checked on a case-by-case basis whether or not research data is protected by copyright. If the copyright status is unclear, please contact a legal professional at your institution.
 
+In order to provide you with further helpful information, we have compiled a list of links:
 
-
+- [Heidi Seibold - Choosing an open license](https://heidiseibold.ck.page/posts/choosing-an-open-license)
+- [Forschungsdaten.info - Forschungsdaten Veröffentlichen](https://forschungsdaten.info/themen/rechte-und-pflichten/forschungsdaten-veroeffentlichen/) (in German)
+- [Forschungsdaten.info - Urheberrecht](https://forschungsdaten.info/themen/rechte-und-pflichten/urheberrecht/) (in German)
+- [Creative Commons - About CC Licenses](https://creativecommons.org/share-your-work/cclicenses/) 
+- [Creative Commons - License Chooser](https://creativecommons.org/choose/)
+- [Forschungsdaten in den Naturwissenschaften: Eine urheberrechtliche Bestandsaufnahme mit ihren Implikationen für universitäres FDM](https://doi.org/10.11588/heibooks.979.c13728) (in German)
+- [Open Knowledge Foundation - Open Data Commons](https://opendatacommons.org/licenses/odbl/)
