fix: proofreading pub std and licences

--- a/docs/50_data_publication/30_licences.mdx
+++ b/docs/50_data_publication/30_licences.mdx
@@ -7,21 +7,21 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Licences
 
-Licences for research data often cause confusion among researchers. One of the main reasons for this is the interplay between **licences used for research data** and the requirements for referencing previous scientific work on which the current work is based, in accordance with the [Guidelines for Safeguarding Good Scientific Practice (DFG Code)](https://wissenschaftliche-integritaet.de/en/code-of-conduct/). 
+Licences for research data often cause confusion among researchers. One of the main reasons for this is the interplay between **licences used for research data** and the requirements for referencing previous scientific work on which the current work is based, in accordance with the [Guidelines for Safeguarding Good Scientific Practice (DFG Code of Conduct)](https://wissenschaftliche-integritaet.de/en/code-of-conduct/). 
 
-The DFG Code requires researchers to cite original sources, i.e. to include original sources in reference sections. Providing a licence for research data is a way to provide permission to share and reuse the data.
+The DFG Code of Conduct requires researchers to cite original sources, i.e. to include original sources in reference sections. Providing a licence for research data is a way to provide permission to share and reuse the data.
 
-Work on dedicated licences for research data is ongoing. Until these licences are available, we recommend switching to [Creative Commons]((https://creativecommons.org/)) licences, which were developed for the licensing of creative works.
+Work on dedicated licences for research data is ongoing. Until these licences are available, we recommend switching to [Creative Commons]((https://creativecommons.org/)) licences, which were developed to license creative works.
 
 :::info Recommendation:
-NFDI4Chem recommends the use the least restritive [Creative Commons](https://creativecommons.org/) licences such as [CC0](https://creativecommons.org/public-domain/cc0/) and [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/deed.en) 
+NFDI4Chem recommends the use the least restrictive [Creative Commons](https://creativecommons.org/) licences such as [CC0](https://creativecommons.org/public-domain/cc0/) and [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/deed.en) 
 :::
 
 :::danger Notice:
 As a first starting point for further information, we strongly recommend the page on [Licenses for research data](https://radar.products.fiz-karlsruhe.de/en/radarfeatures/lizenzen-fuer-forschungsdaten) provided by FIZ Karlsruhe, which also includes information on certain rights that authors cannot waive in Germany, that copyright only protects personal intellectual creations, and that isolated research data are not protected by copyright.  
 :::
 
-Disclaimer: It should be checked on a case-by-case basis whether or not research data is protected by copyright. If the copyright status is unclear, please contact a legal professional at your institution.
+Disclaimer: It should be checked on a case-by-case basis whether research data is protected by copyright. If the copyright status is unclear, please contact a legal professional at your institution.
 
 In order to provide you with further helpful information, we have compiled a list of links:
 
