--- a/docs/50_data_publication/70_publishing_standards/28_publishing_standards_intro.mdx
+++ b/docs/50_data_publication/70_publishing_standards/28_publishing_standards_intro.mdx
@@ -7,12 +7,12 @@ id: "publishing_standards_intro"
 import N4CFeatures from '/src/components/N4CFeatures.js';
 
 :::info Info:
-Authors, academic publishers and research data infrastructure and resource providers are the target audiences for these standards.
+Authors, academic publishers and research data infrastructure providers are the target audiences for these standards.
 :::
 
-On this page we collect a non-exhaustive list of data publication standards, formulated as principles, that have been developed within the NFDI4Chem Publication Standards project. These standards are intended to implement the [FAIR Data Principles](/docs/fair/) with repect to data publication workflows. The main objective of these standards is to improve the quality of metadata and streamline publication workflows, including the manuscript peer-review process with corresponding datasets published in research data repositories. 
+On these pages we collect a non-exhaustive list of data publishing standards, formulated as principles, that have been developed within the NFDI4Chem Publication Standards project. These standards are intended to implement the [FAIR Data Principles](/docs/fair/) with respect to data publishing workflows. The main objective of these standards is to improve the quality of metadata and streamline publishing workflows, including the manuscript peer-review process with corresponding datasets published in research data repositories. 
 
-Click on a button below to get started with with standards for authors, academic publishers and infrastructure providers. These standards will be continously updated. 
+Click on a button below to get started with standards for authors, academic publishers and infrastructure providers. These standards will be continuously updated. 
 
 <N4CFeatures feature="stakeholders_data_publishing" />
 
