--- a/docs/50_data_publication/70_publishing_standards/10_publishing_standards_authors.mdx
+++ b/docs/50_data_publication/70_publishing_standards/10_publishing_standards_authors.mdx
@@ -3,19 +3,19 @@ title: "For Authors"
 slug: "/publishing_standards_authors"
 ---
 
-### Use ORCID iD to Identifiy Authors and ROR to Identifiy Institutions
+### Use ORCID iD to identifiy authors and ROR to identifiy institutions
 
 :::tip Standard
 _Authors should provide their ORCID iD to identify the authors/creators and contributors, and their ROR identifier to identify the institution to which they are affiliated._
 :::
 
-ORCID iDs allow authors to be uniquely identified, whereas author names may not be unique, may change, or may have different ordering conventions depending on cultural differences. Similarly, affiliations can vary according to style and granularity. In order to uniquely identify the institutions to which authors are affiliated, the ROR identifier should be provided. Please note that the ROR identifier is not intended to resolve down to the departmental level. Nevertheless, both identifiers improve findability.
+ORCID iDs allow authors to be uniquely identified, whereas author names may not be unique, may change, or may have different ordering conventions depending on cultural differences. Similarly, affiliations can vary according to style and granularity. In order to uniquely identify the institutions to which authors are affiliated, the ROR identifier should be provided. Please note that the ROR identifier is not intended to resolve down to the department level, as the stability of institutional units decrease, the finer the granularity. Both identifiers improve findability as well as traceability of your scientific work.
 
-### How to use Dataset PIDs in Scientific Articles
+### How to use dataset PIDs in scientific articles
 
 During deposition of research data, a [persistent identifier (PID)](/docs/pid) is assigned to the data. Authors should use PIDs in their scientific article for interlinking and referencing in **two main ways**:
 
-#### How to use Dataset PIDs of own Datasets in Scientific articles
+#### How to use dataset PIDs of own datasets in scientific articles
 
 :::tip Standard
 _Authors should add the PID of their corresponding dataset(s) to the data availability statement and should add PIDs of dataset(s) to the reference section in order to specifically cite dataset(s)._
@@ -27,7 +27,7 @@ For corresponding data, i.e. directly underlying the results reported in the art
 This distinction is important, because **the link** to the dataset in CrossRef's DOI metadata of scientific articles **is differently set**, depending on whether the dataset is a directly related source of information or a specifically referenced resource.
 :::
 
-#### How to use Dataset PIDs for Datasets by other Researchers in Scientific articles
+#### How to use dataset PIDs for datasets by other researchers in scientific articles
 
 :::tip Standard
 _Authors should include PIDs for datasets published by other researchers that have been reused in the references, rather than citing the corresponding article._
@@ -35,7 +35,7 @@ _Authors should include PIDs for datasets published by other researchers that ha
 
 For datasets published by other researchers and reused in a study, include the dataset PID in the reference section of the manuscript and cite within the text accordingly.
 
-### How to Link Datasets to their Corresponding Scientific Article
+### How to link datasets to their corresponding scientific article
 
 :::tip Standard
 _Researchers should link their datasets to be published to their corresponding articles by adding the article DOI to the dataset's DataCite metadata as a related identifier._
@@ -43,13 +43,13 @@ _Researchers should link their datasets to be published to their corresponding a
 
 Research data repositories offer the option to add a related identifier to link datasets to related resources, such as a corresponding article. This considerably enhances the [FAIRness](/docs/fair/) of datasets, mainly the findability ([F2](/docs/fair/#f2-data-are-described-with-rich-metadata-defined-by-r1-below)) as well as the interoperability ([I3](/docs/fair/#i3-metadata-include-qualified-references-to-other-metadata)).
 
-### Usage of Relation Type for Linking Datasets with Scientific Articles
+### Usage of relation type for linking datasets with scientific articles
 
 :::tip Standard
 _Researchers should link their datasets to be published to their corresponding articles using the relation type `IsSupplementTo`._
 :::
 
-According to the [DataCite Metadata Schema](https://datacite-metadata-schema.readthedocs.io/en/4.5/appendices/appendix-1/relationType/), [`IsCitedBy`](https://datacite-metadata-schema.readthedocs.io/en/4.5/appendices/appendix-1/relationType/#iscitedby) and [`IsSupplementTo`](https://datacite-metadata-schema.readthedocs.io/en/4.5/appendices/appendix-1/relationType/#issupplementto) are both recommended for discovery. For published articles, [CrossRef's documentation on relationships](https://www.crossref.org/documentation/schema-library/markup-guide-metadata-segments/relationships/) recommends that `isSupplmenetTo` should be used to link datasets generated as part of research results.
+According to the [DataCite Metadata Schema](https://datacite-metadata-schema.readthedocs.io/en/4.5/appendices/appendix-1/relationType/), [`IsCitedBy`](https://datacite-metadata-schema.readthedocs.io/en/4.5/appendices/appendix-1/relationType/#iscitedby) and [`IsSupplementTo`](https://datacite-metadata-schema.readthedocs.io/en/4.5/appendices/appendix-1/relationType/#issupplementto) are both recommended for discovery. For published articles, [CrossRef's documentation on relationships](https://www.crossref.org/documentation/schema-library/markup-guide-metadata-segments/relationships/) recommends that `isSupplmenetTo` should be used to link datasets generated as part of research results. Please note that some repositories automatically detect whether the linked object is an article or some other dataset published in another repository, and therefore don't require authors to specify a relation(ship) type.
 
 ### Usage of Collection DOIs
 
