fix: added headline for link list on licence page

--- a/docs/50_data_publication/30_licences.mdx
+++ b/docs/50_data_publication/30_licences.mdx
@@ -23,6 +23,8 @@ As a first starting point for further information, we strongly recommend the pag
 
 Disclaimer: It should be checked on a case-by-case basis whether research data is protected by copyright. If the copyright status is unclear, please contact a legal professional at your institution.
 
+## Sources and further information
+
 In order to provide you with further helpful information, we have compiled a list of links:
 
 - [Heidi Seibold - Choosing an open license](https://heidiseibold.ck.page/posts/choosing-an-open-license)
