--- a/docs/10_domains/50_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/50_pharmaceutical_chemistry.mdx
@@ -3,10 +3,12 @@ title: "Medicinal / Pharmaceutical Chemistry"
 slug: "/pharmaceutical_chemistry"
 ---
 
-import Methods from '@site/src/components/Methods.js';
-import {LbeChip} from '@site/src/components/lbe/LbeElements.js';
+import Methods from "@site/src/components/Methods.js";
+import { LbeChip } from "@site/src/components/lbe/LbeElements.js";
+import ElnFinderPharm from "@site/src/components/eln/ElnFinderPharm.js";
 
-<LbeChip title="medicinal chemistry" /><LbeChip title="epidemiology" />
+<LbeChip title="medicinal chemistry" />
+<LbeChip title="epidemiology" />
 
 ## Introduction
 
@@ -14,11 +16,13 @@ Medicinal chemistry is a chemistry-based, strongly interdisciplinary discipline.
 
 ## Data Types
 
-The most common types of data in pharmaceutical/medicinal chemistry can be divided into three categories: synthesis data, analytical data, and (bio)assay data. While the first two types of data (synthesis and analytical data) play a role in broad areas of chemistry, (bio)assay data, which is used to investigate the biological activity of a substance, is a particular feature of pharmaceutical/medicinal chemistry. 
+The most common types of data in pharmaceutical/medicinal chemistry can be divided into three categories: synthesis data, analytical data, and (bio)assay data. While the first two types of data (synthesis and analytical data) play a role in broad areas of chemistry, (bio)assay data, which is used to investigate the biological activity of a substance, is a particular feature of pharmaceutical/medicinal chemistry.
 
 ## ELNs and Other Tools
 
-To meet the requirements for FAIR data management, electronic lab notebooks (ELNs) are particularly useful as they can take over many documentation tasks for researchers. The following ELNs are used in the community, for example: Chemotion ELN, Sicformation, eLabFTW, eLabJournal, labfolder, Benchling. The [ELN-Finder](https://eln-finder.ulb.tu-darmstadt.de/search?f.K03=Pharmacy,equals&spc.page=1) offers additional options. How to choose the right ELN for the research group can be read [here](https://knowledgebase.nfdi4chem.de/knowledge_base/docs/choose_eln/). 
+To meet the requirements for FAIR data management, electronic lab notebooks (ELNs) are particularly useful as they can take over many documentation tasks for researchers. The [ELN-Finder](https://eln-finder.ulb.tu-darmstadt.de/search?f.K03=Pharmacy,equals&spc.page=1) offers a selection of pharmacy-specific ELNs. How to choose the right ELN for the research group can be read [here](https://knowledgebase.nfdi4chem.de/knowledge_base/docs/choose_eln/).
+
+<ElnFinderPharm />
 
 For the planning of research data management and the creation of data management plans, tools such as RDMO and DMP-Online are suitable. Many universities have their own instances of one of these solutions.
 
