feat: use privacy session cookie for videos

--- a/docs/40_smartlab/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/20_chemotion_eln.mdx
@@ -24,9 +24,10 @@ Chemotion ELN offers a specific function that facilitates the [publication of re
 A short introduction to the Chemotion ELN as well as the connection to the Chemotion repository is demonstrated in this video:
 
 <VideoPrivacy
+    cookie
     imageUrl={useBaseUrl("/img/smartlab/chemotion_preview.jpg")}
     width={800}
-    info="YouTube uses cookies and stores personal data. To view embedded videos from YouTube, please indicate your consent to load this video from an external source."
+    info="YouTube uses cookies and stores personal data. To view embedded videos from YouTube, please indicate your consent to load this video from an external source. Your decision will be saved for this session."
     buttonText="I agree"
     customButtonClass="button button--primary"
 >
