--- a/docs/60_topics/63_data_description_annotation/20_ontology.mdx
+++ b/docs/60_topics/63_data_description_annotation/20_ontology.mdx
@@ -13,9 +13,10 @@ The term ontology, as used in our context, refers to a formally specified concep
 ## Introduction
 
 <VideoPrivacy
+    cookie
     imageUrl={useBaseUrl("/img/topics/ontologies_preview.webp")}
     width={800}
-    info="YouTube uses cookies and stores personal data. To view embedded videos from YouTube, please indicate your consent to load this video from an external source."
+    info="YouTube uses cookies and stores personal data. To view embedded videos from YouTube, please indicate your consent to load this video from an external source. Your decision will be saved for this session."
     buttonText="I agree"
     customButtonClass="button button--primary"
 >
