--- a/docs/40_smartlab/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/20_chemotion_eln.mdx
@@ -25,6 +25,7 @@ A short introduction to the Chemotion ELN as well as the connection to the Chemo
 
 <VideoPrivacy
     cookie
+    cookieName="n4cVideoPrivacy"
     imageUrl={useBaseUrl("/img/smartlab/chemotion_preview.jpg")}
     width={800}
     info="YouTube uses cookies and stores personal data. To view embedded videos from YouTube, please indicate your consent to load this video from an external source. Your decision will be saved for this session."
